Thu Mar 19 10:31:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (fill_random_bytes): release the handle in the static
	  variable, not a local variable.

Thu Mar 19 06:30:35 2015  Koichi Sasada  <ko1@atdot.net>

	* object.c (rb_obj_clone): do not touch age (FL_PROMOTED[01]) because
	  rb_obj_alloc() can return old object in debug.

Thu Mar 19 06:29:28 2015  Koichi Sasada  <ko1@atdot.net>

	* test/objspace/test_objspace.rb: flag name was changed
	  (long_lived -> uncollectible).

Thu Mar 19 05:30:13 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_mark): skip some marking if iseq->orig is available.

	* iseq.c (rb_iseq_clone): need WB for iseq1->klass = iseq0->klass
	  (done in MEMCPY).

Thu Mar 19 04:55:53 2015  Koichi Sasada  <ko1@atdot.net>

	* internal.h (IMEMO_DEBUG): added.

	* internal.h: remove unused FL_IMEMO_MARK_V[0-3].

	* gc.c (rb_imemo_new_debug): added.

	* gc.c (obj_info): show imemo type name.

Thu Mar 19 04:52:26 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (RGENGC_OLD_NEWOBJ_CHECK): add check mechanism.

	  If RGENGC_OLD_NEWOBJ_CHECK > 0, then create old objects
	  (not new objects) periodically.

	  Create one old objects per RGENGC_OLD_NEWOBJ_CHECK objects are
	  created.

Thu Mar 19 04:46:36 2015  Koichi Sasada  <ko1@atdot.net>

	* enum.c (enum_sort_by): add WBs.

Thu Mar 19 03:37:52 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (check_rvalue_consistency): refactoring.
	  * not inline on RGENGC_CHECK_MODE > 0.
	  * check SPECIAL_CONST_P(obj) first.
	  * add a check that remembered_bit is only TRUE when old (age == 3).

	* gc.c (RVALUE_DEMOTE): should clear RVALUE_REMEMBERED bit.

	  remembered_bit should be TRUE only for old (age == 3) objects.

	  Actually there are no effect because demoted objects will be
	  uncollectible WB unprotected objects (marked at the begginig of
	  every minor GC).

Thu Mar 19 02:52:48 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename terminologies.
	  * long_lived -> uncollectible: