@@ -1,3 +1,7 @@
+Thu Mar 19 16:08:42 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (rb_copy_wb_protected_attribute): need demote for old objects.
+
 Thu Mar 19 10:31:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* random.c (fill_random_bytes): release the handle in the static
